# mini-model

./: README.md  requirements.txt  setup.cfg
src/minimodel/utilities/: base.py
