[metadata]
name = minimodel
version = 0.0.1
author = Liam Grossman
author_email = me@liamgrossman.com
license = Apache License 2.0
description = Create refined, specilized models and agents with LLMs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = llms, gen ai, machine learning
url = https://github.com/LGmatrix13/mini-model
classifiers =
	Development Status :: Alpha
	License :: OSI Approved :: Apache License 2.0
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Topic :: AI
    Topic :: LLM
	Topic :: Software Development

[options]
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	pythonstarterpackage = minimodel.main:main